# TensorRT-DETR

./: README.md  detr_pth2onnx.py  generate_batch_plan.py  inference_detr_onnx.py  inference_detr_trt.py  performance_accuracy_detr.py  performance_time_detr.py  requirements.txt  trt_int8_quant.py
cpp/: CMakeLists.txt
cpp/src/: main.cc
model/: README.md  backbone.py  detr.py  hubconf.py  matcher.py  misc.py  position_encoding.py  segmentation.py  transformer.py
trt_util/: calibrator.py  common.py  plot_box.py  process_img.py  trt_lite.py
